--- a/.env-example
+++ b/.env-example
@@ -1,6 +1,6 @@
-ROCKETCHAT_HOST=rocket.leipsieb.de
+ROCKETCHAT_HOST=rocket.YOURDOMAIN
 ROCKETCHAT_ROOM=GENERAL
-NEXTCLOUD_HOST=next.leipsieb.de
+NEXTCLOUD_HOST=next.YOURDOMAIN
 
 MYSQL_ROOT_PASSWORD=verysecret123
 MYSQL_PASSWORD=secret
